# reference-palisade-backend

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  quickstart_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml  klocwork.yml  setup-code-for-kw_palisade-backend.sh
cmake/utils/: import-library.cmake
include/benchmarks/bfv/: palisade_bfv_dot_product_benchmark.h  palisade_bfv_element_wise_benchmark.h  palisade_bfv_matmult_cipherbatchaxis_benchmark.h  palisade_bfv_matmulteip_benchmark.h  palisade_bfv_matmultrow_benchmark.h  palisade_bfv_matmultval_benchmark.h
include/benchmarks/ckks/: palisade_ckks_dot_product_benchmark.h  palisade_ckks_element_wise_benchmark.h  palisade_ckks_eltwiseadd_pc_benchmark.h  palisade_ckks_logreg_benchmark.h  palisade_ckks_matmult_cipherbatchaxis_benchmark.h  palisade_ckks_matmulteip_benchmark.h  palisade_ckks_matmultrow_benchmark.h  palisade_ckks_matmultval_benchmark.h
include/engine/: palisade_context.h  palisade_engine.h  palisade_error.h  palisade_version.h.in
src/benchmarks/bfv/: palisade_bfv_dot_product_benchmark.cpp  palisade_bfv_element_wise_benchmark.cpp  palisade_bfv_matmult_cipherbatchaxis_benchmark.cpp  palisade_bfv_matmulteip_benchmark.cpp  palisade_bfv_matmultrow_benchmark.cpp  palisade_bfv_matmultval_benchmark.cpp
src/benchmarks/ckks/: palisade_ckks_dot_product_benchmark.cpp  palisade_ckks_element_wise_benchmark.cpp  palisade_ckks_eltwiseadd_pc_benchmark.cpp  palisade_ckks_logreg_benchmark.cpp  palisade_ckks_matmult_cipherbatchaxis_benchmark.cpp  palisade_ckks_matmulteip_benchmark.cpp  palisade_ckks_matmultrow_benchmark.cpp  palisade_ckks_matmultval_benchmark.cpp
src/engine/: palisade_context.cpp  palisade_engine.cpp
